alert sent if name not inputted

--- a/HelpOthers/Base.lproj/Main.storyboard
+++ b/HelpOthers/Base.lproj/Main.storyboard
@@ -65,9 +65,9 @@
         <!--List Prescription View Controller-->
         <scene sceneID="hdD-ZT-kgT">
             <objects>
-                <viewController id="KAE-J8-i4G" customClass="ListPrescriptionViewController" customModule="HelpOthers" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="prescription" useStoryboardIdentifierAsRestorationIdentifier="YES" id="KAE-J8-i4G" customClass="ListPrescriptionViewController" customModule="HelpOthers" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qyb-bL-3Fs">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="List Prescriptions Below:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZjG-Qg-gaE">
@@ -151,7 +151,6 @@
                                 <connections>
                                     <action selector="toWantHelpGroceriesScreen:" destination="BJe-t1-1fG" eventType="touchUpInside" id="yik-bd-gVo"/>
                                     <action selector="toWantHelpScreen:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yXY-RU-arr"/>
-                                    <segue destination="P7R-UP-k1f" kind="presentation" id="bCp-L7-hcS"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GbP-cI-Fl1">
@@ -162,7 +161,6 @@
                                 <connections>
                                     <action selector="toWantHelpPrescriptionScreen:" destination="BJe-t1-1fG" eventType="touchUpInside" id="MhA-oU-Pe7"/>
                                     <action selector="toWantHelpScreen:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bIX-zn-Tzc"/>
-                                    <segue destination="KAE-J8-i4G" kind="presentation" id="fc5-W1-UoS"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hello There!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o3T-E3-5Wd">
@@ -240,9 +238,9 @@
         <!--List Groceries View Controller-->
         <scene sceneID="HlK-Qj-nBQ">
             <objects>
-                <viewController id="P7R-UP-k1f" customClass="ListGroceriesViewController" customModule="HelpOthers" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="groceries" useStoryboardIdentifierAsRestorationIdentifier="YES" id="P7R-UP-k1f" customClass="ListGroceriesViewController" customModule="HelpOthers" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gyo-tB-Ao2">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="List Groceries Below:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fFP-EQ-BY3">
