--- a/HelpOthers/Base.lproj/Main.storyboard
+++ b/HelpOthers/Base.lproj/Main.storyboard
@@ -516,6 +516,21 @@
             </objects>
             <point key="canvasLocation" x="1766.6666666666667" y="847.76785714285711"/>
         </scene>
+        <!--Helper Paired View Controller-->
+        <scene sceneID="Q8i-BQ-Bb8">
+            <objects>
+                <viewController storyboardIdentifier="helperpaired" useStoryboardIdentifierAsRestorationIdentifier="YES" id="loQ-DF-Iql" customClass="HelperPairedViewController" customModule="HelpOthers" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="afM-7i-ufS">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="WGD-1m-6YZ"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="C6Y-Mm-Ay8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2613" y="848"/>
+        </scene>
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="Fk0-qs-ZsF"/>
