--- a/HelpOthers/Base.lproj/Main.storyboard
+++ b/HelpOthers/Base.lproj/Main.storyboard
@@ -516,13 +516,22 @@
             </objects>
             <point key="canvasLocation" x="1766.6666666666667" y="847.76785714285711"/>
         </scene>
-        <!--Helper Paired View Controller-->
+        <!--Helper Paired Load View Controller-->
         <scene sceneID="Q8i-BQ-Bb8">
             <objects>
-                <viewController storyboardIdentifier="helperpaired" useStoryboardIdentifierAsRestorationIdentifier="YES" id="loQ-DF-Iql" customClass="HelperPairedViewController" customModule="HelpOthers" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="helperpairedload" useStoryboardIdentifierAsRestorationIdentifier="YES" id="loQ-DF-Iql" customClass="HelperPairedLoadViewController" customModule="HelpOthers" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="afM-7i-ufS">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="PAIRING YOU" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cqx-fC-PBd">
+                                <rect key="frame" x="28" y="418" width="358" height="60"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="38"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="WGD-1m-6YZ"/>
                     </view>
@@ -531,8 +540,23 @@
             </objects>
             <point key="canvasLocation" x="2613" y="848"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="4zu-N5-yRF">
+            <objects>
+                <viewController id="ggj-Yp-wVp" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FNd-S5-oFz">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="kgn-5J-m3z"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Yv-mK-GoJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3430" y="848"/>
+        </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Fk0-qs-ZsF"/>
+        <segue reference="0qg-4B-XnO"/>
     </inferredMetricsTieBreakers>
 </document>
